--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>"Райка and Лайка" - телеканал</title>
+	<title>Тест</title>
 
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -104,8 +104,8 @@
 		<b>Видео</b>
 </div>
 <div class='video'>
-  <iframe src="https://vk.com/video_ext.php?oid=-62120883&id=456239489&hash=b565466d50ee26b3&hd=2" width="643" height="360" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
-  <iframe src="https://vk.com/video_ext.php?oid=-62120883&id=456239490&hash=136f8f603aa61221&hd=1" width="640" height="360" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
+  <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239037&hash=3ae426b77391b5cc&hd=1" width="640" height="360" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
+  <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239035&hash=0e3c0205e867be86&hd=1" width="640" height="360" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
 </div>
 <a class="button_glbol" href="/allphoto"><b>Ещё видео</b></a>
 
