--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<title>Тест</title>
+	<meta name="yandex-verification" content="d6393e3431b0c435" />
+	<title>"Райка and Лайка" - телеканал</title>
 
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -79,13 +79,13 @@
 
 <div class="header">
 	<div class="emblem">
-		<img src="/theme/images/Лого новое.png">
+		<img src="/theme/images/NewLogo.png">
 	</div>
 	<div class="title">
-		<p>Тест</p>
+		<p>Телеканал "Райка and Лайка"</p>
 	</div>
 	<div class="description">
-		<p>Это новый сайт телеканала "Тест"!</p>
+		<p>Это новый сайт телеканала "Райка and Лайка"!</p>
 		<p>Именно здесь можно узнать о последних и предстоящих эфирах и конкурсах! Также можете смотреть эфир, разные передачи в записях и не только!</p>
 	</div>
 <div class="title">
@@ -104,10 +104,9 @@
 		<b>Видео</b>
 </div>
 <div class='video'>
-  <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239037&hash=3ae426b77391b5cc&hd=1" width="640" height="360" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
-  <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239035&hash=0e3c0205e867be86&hd=1" width="640" height="360" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
+	<iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239040&hash=f20cf5d1bc2ca085&hd=1" width="640" height="360" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
 </div>
-<a class="button_glbol" href="/allphoto"><b>Ещё видео</b></a>
+<a class="button_glbol" href="https://vk.com/video/@rayka_and_layka_new"><b>Ещё видео</b></a>
 
 <div class="footer">
 
