--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="yandex-verification" content="d6393e3431b0c435" />
-	<title>"Райка and Лайка" - телеканал</title>
+	<title>Райка and Лайка - телеканал</title>
 
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
