--- a/livetv.html
+++ b/livetv.html
@@ -119,9 +119,9 @@
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир телеканала:<h1>
-     <mark>Телеканал сейчас ничего не вещает</mark>
+     <!-- <mark>Телеканал сейчас ничего не вещает</mark> -->
      <div class="video">
-          <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239041&hash=173e9ed79b6fbaed&hd=1" width="853" height="480" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
+          <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239042&hash=62acfba56a1a60e6&hd=2" width="853" height="480" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="footer2">
         <div class="contein3"><b>© Телеканал "Райка and Лайка"</b></div>
