--- a/livetv.html
+++ b/livetv.html
@@ -121,7 +121,7 @@
      <h1 class='Nashi_horse'>Прямой эфир телеканала:<h1>
      <!-- <mark>Телеканал сейчас ничего не вещает</mark> -->
      <div class="video">
-          <iframe width="853" height="479" src="https://rutube.ru/play/embed/6442fb41a8d464abf9b86d8d889f203a" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>  
+          <iframe width="853" height="479" src="https://www.youtube.com/embed/VSoWsGklySw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>   
      </div>
      <div class="footer2">
         <div class="contein3"><b>© Телеканал "Райка and Лайка"</b></div>
