--- a/history.html
+++ b/history.html
@@ -134,10 +134,10 @@
     Райка and Лайка (Президент)<br>
     <b>Остальные участники:</b><br>
     Крулер (Вице-президент, пиар-менеджер)<br>
+    Fallen_Rus... (Режиссёр по съёмкам производства "Райка and Лайка")<br>
     Sk yz93 (Глав. Помощник по монтажу)<br>
     Zery (Главный пиар-менеджер)<br>
-    Паштет (Участник, главный по съёмкам видео с Райка and Лайка Community)<br>
-    Bodya (Участник)</p>
+    <!-- Паштет (Участник, главный по съёмкам видео с Райка and Лайка Community)<br> -->
     <div class="footer2">
        <div class="contein3"><b>© Телеканал "Райка and Лайка"</b></div>
     </div>
