--- a/livetv.html
+++ b/livetv.html
@@ -119,9 +119,9 @@
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир телеканала:<h1>
-     <!-- <mark>Телеканал сейчас ничего не вещает</mark> -->
+     <mark>Телеканал сейчас ничего не вещает</mark>
      <div class="video">
-          <iframe width="853" height="479" src="https://www.youtube.com/embed/VSoWsGklySw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>   
+          <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239044&hash=70cb2e976fddc98e&hd=1&autoplay=1" width="853" height="479" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>  
      </div>
      <div class="footer2">
         <div class="contein3"><b>© Телеканал "Райка and Лайка"</b></div>
