--- a/livetv.html
+++ b/livetv.html
@@ -119,7 +119,7 @@
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир телеканала:<h1>
-     <mark>Телеканал сейчас ничего не вещает</mark>
+     <!-- <mark>Телеканал сейчас ничего не вещает</mark> -->
      <div class="video">
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239044&hash=70cb2e976fddc98e&hd=1&autoplay=1" width="853" height="479" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>  
      </div>
