--- a/livetv.html
+++ b/livetv.html
@@ -121,7 +121,7 @@
      <h1 class='Nashi_horse'>Прямой эфир телеканала:<h1>
      <!-- <mark>Телеканал сейчас ничего не вещает</mark> -->
      <div class="video">
-          <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239044&hash=70cb2e976fddc98e&hd=1&autoplay=1" width="853" height="479" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>  
+          <iframe width="853" height="479" src="https://rutube.ru/play/embed/37dab2f74d5302492898f8b5a17a12b0?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>    
      </div>
      <div class="footer2">
         <div class="contein3"><b>© Телеканал "Райка and Лайка"</b></div>
