--- a/livetv.html
+++ b/livetv.html
@@ -119,7 +119,7 @@
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир телеканала:<h1>
-     <!-- <mark>Телеканал сейчас ничего не вещает</mark> -->
+     <mark>Телеканал сейчас ничего не вещает</mark>
      <div class="video">
           <iframe width="853" height="479" src="https://rutube.ru/play/embed/918c53a3d4213b389b836ba7588dbd6c?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>        
      </div>
