--- a/livetv.html
+++ b/livetv.html
@@ -119,7 +119,7 @@
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир телеканала:<h1>
-     <!-- <mark>Телеканал сейчас ничего не вещает</mark> -->
+     <mark>Телеканал сейчас ничего не вещает</mark>
      <div class="video">
           <iframe width="850" height="478" src="https://rutube.ru/play/embed/6a978dde90fa01e59e8785cbaf5bbf95?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>            
      </div>
