--- a/livetv.html
+++ b/livetv.html
@@ -121,7 +121,7 @@
      <h1 class='Nashi_horse'>Прямой эфир телеканала:<h1>
      <!-- <mark>Телеканал сейчас ничего не вещает</mark> -->
      <div class="video">
-          <iframe width="850" height="478" src="https://rutube.ru/play/embed/f961e8830ca01d968bc20f0e4a659a92?skinColor=e53935&t=670" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>         
+          <iframe width="850" height="478" src="https://rutube.ru/play/embed/248c82f411a217b64f2d8fbb165c40af?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>         
      </div>
      <div class="footer2">
         <div class="contein3"><b>© Телеканал "Райка and Лайка"</b></div>
