--- a/livetv.html
+++ b/livetv.html
@@ -118,13 +118,13 @@
 </div>
 
 <div class='ob'>
-     <h1 class='Nashi_horse'>Прямой эфир телеканала:<h1>
-     <!-- <mark>Телеканал сейчас ничего не вещает</mark> -->
+     <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
+     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
      <div class="video">
           <iframe width="850" height="478" src="https://rutube.ru/play/embed/91585e9f4306ec58340a1e29e4cd3683?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>         
      </div>
      <div class="footer2">
-        <div class="contein3"><b>© Телеканал "Райка and Лайка"</b></div>
+        <div class="contein3"><b>© Интернет-канал "Райка and Лайка"</b></div>
      </div>
 </div>
   </div><!-- /.entry-content -->
