--- a/history.html
+++ b/history.html
@@ -138,7 +138,7 @@
     Sk yz93 (Глав. Помощник по монтажу)<br>
     <!-- Паштет (Участник, главный по съёмкам видео с Райка and Лайка Community)<br> -->
     <div class="footer2">
-       <div class="contein3"><b>© Телеканал "Райка and Лайка"</b></div>
+       <div class="contein3"><b>© Интерне-канал "Райка and Лайка"</b></div>
     </div>
 </div>
   </div><!-- /.entry-content -->
