--- a/livetv.html
+++ b/livetv.html
@@ -121,9 +121,9 @@
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
-     <mark>Интернет-канал сейчас ничего не вещает</mark>
+     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
      <div class="video">
-          <iframe width="850" height="478" src="https://rutube.ru/play/embed/8c776b3cc2d084be415469e69e53a814?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>        
+          <iframe width="720" height="405" src="https://rutube.ru/play/embed/fb4938dd16ee3ba7013798f1c8038927?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>        
      </div>
      <div class="footer2">
         <div class="contein3"><b>© Интернет-канал "Райка and Лайка"</b></div>
