Подача заявок через сайт

--- a/history.html
+++ b/history.html
@@ -92,7 +92,7 @@
 		<a class="button" href="/"><p>Главная</p></a>
 		<a class="button" href="/livetv"><p>Прямой эфир</p></a>
 		<a class="button" href="/history"><p>История</p></a>
-		<!-- <a class="button" href="/training"><p>Записаться на занятия</p></a> -->
+		<!-- <a class="button" href="/rabota"><p>Стать частью команды</p></a> -->
 		</div>
 <section id="content" class="body">
   <header>
@@ -138,7 +138,7 @@
     Sk yz93 (Глав. Помощник по монтажу)<br>
     <!-- Паштет (Участник, главный по съёмкам видео с Райка and Лайка Community)<br> -->
     <div class="footer2">
-       <div class="contein3"><b>© Интерне-канал "Райка and Лайка"</b></div>
+       <div class="contein3"><b>© Интернет-канал "Райка and Лайка"</b></div>
     </div>
 </div>
   </div><!-- /.entry-content -->
