--- a/photo.html
+++ b/photo.html
@@ -92,7 +92,7 @@
 		<a class="button" href="/"><p>Главная</p></a>
 		<a class="button" href="/livetv"><p>Прямой эфир</p></a>
 		<a class="button" href="/history"><p>История</p></a>
-		<!-- <a class="button" href="/training"><p>Записаться на занятия</p></a> -->
+		<!-- <a class="button" href="/rabota"><p>Стать частью команды</p></a> -->
 		</div>
 <section id="content" class="body">
   <header>
