--- a/rabota-roblox.html
+++ b/rabota-roblox.html
@@ -117,8 +117,9 @@
     <a href="/"><img src="/theme/images/NewLogo.png"></a>
 </div>
 <p><a class='Back' href='/rabota'>Назад</a></p>
-<script src="https://yastatic.net/s3/frontend/forms/_/embed.js"></script>
-<iframe src="https://forms.yandex.ru/u/6501cea1d0468810711ba7e0/?iframe=1" frameborder="0" name="ya-form-6501cea1d0468810711ba7e0" width="650"></iframe>
+<div class="Form">
+    <script src="https://yastatic.net/s3/frontend/forms/_/embed.js"></script><iframe src="https://forms.yandex.ru/u/6501cea1d0468810711ba7e0/?iframe=1" frameborder="0" name="ya-form-6501cea1d0468810711ba7e0" width="650"></iframe>
+</div>
 
 <div class="footer2">
         <div class="contein3"><b>© Интернет-канал "Райка and Лайка"</b></div>
