--- a/halloween.html
+++ b/halloween.html
@@ -116,7 +116,7 @@
     <div class="emblem_mini">
     <a href="/"><img src="/theme/images/NewLogo.png"></a>
 </div>
-<p><a class='Back' href='/rabota'>Назад</a></p>
+<p><a class='Back' href='/'>Назад</a></p>
 <div class='Form'>
     <script src="https://yastatic.net/s3/frontend/forms/_/embed.js"></script><iframe src="https://forms.yandex.ru/u/653aa308f47e733d0ab1bc89/?iframe=1" frameborder="0" name="ya-form-653aa308f47e733d0ab1bc89" width="650"></iframe>
 </div>
