--- a/history.html
+++ b/history.html
@@ -121,11 +121,12 @@
     <h1 class='hhh'>История интернет-канала:<h1>
     <p>Дата основания была официально припредставлена 23.10.2022</p>
     <br>
+    <h1 class='hhh'>Вакансии:<h1>
     <p>В состав команды интернет-канала "Райка and Лайка" входят следующие вакансии:<br>
     Телевизионщик<br>
     Монтажёр<br>
     Продюссер (По созданию разных проектов "Райка and Лайка")<br>
-    PR-менежер<br>
+    PR-менеджер<br>
     Графический дизайнер</p>
     <p>Всё это актуальные вакансии. Подать заявку, нажав на кнопку ниже:</p>
 </div>
