--- a/history.html
+++ b/history.html
@@ -125,7 +125,7 @@
     <p>В состав команды интернет-канала "Райка and Лайка" входят следующие вакансии:<br>
     Телевизионщик<br>
     Монтажёр<br>
-    Продюссер (По созданию разных проектов "Райка and Лайка")<br>
+    Продюсер (По созданию разных проектов "Райка and Лайка")<br>
     PR-менеджер<br>
     Графический дизайнер</p>
     <p>Всё это актуальные вакансии. Подать заявку, нажав на кнопку ниже:</p>
