--- a/livetv.html
+++ b/livetv.html
@@ -121,7 +121,7 @@
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
-     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
+     <mark>Интернет-канал сейчас ничего не вещает</mark>
      <div class="video">
           <iframe width="850" height="478" src="https://rutube.ru/play/embed/dc4dd65e2c35d3e48fbf5aa1491ed00f?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>    
      </div>
