--- a/rabota-osnova.html
+++ b/rabota-osnova.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
 	<!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -120,7 +121,7 @@
 <div class='Form'>
     <script src="https://yastatic.net/s3/frontend/forms/_/embed.js"></script><iframe src="https://forms.yandex.ru/u/650dd11d90fa7bbb46737e8d/?iframe=1" frameborder="0" name="ya-form-650dd11d90fa7bbb46737e8d" width="650"></iframe>
 </div>
-
+<p class="politica">Вы можете ознакомиться с <a href="/politica">Политикой в отношении обработки персональных данных</a></p>
 <div class="footer2">
         <div class="contein3"><b>© Интернет-канал "Райка and Лайка"</b></div>
   </div><!-- /.entry-content -->
