--- a/livetv.html
+++ b/livetv.html
@@ -318,9 +318,9 @@
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
-     <mark>Интернет-канал сейчас ничего не вещает</mark>
+     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
      <div class="video">
-          <iframe width="850" height="478" src="https://rutube.ru/play/embed/dc4dd65e2c35d3e48fbf5aa1491ed00f?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>    
+          <iframe width="560" height="315" src="https://nuum.ru/embed/record/1575405" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>    
      </div>
      <div class="footer2">
         <div class="contein3"><b>© Интернет-канал "Райка and Лайка"</b></div>
