--- a/livetv.html
+++ b/livetv.html
@@ -320,7 +320,7 @@
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
      <!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
      <div class="video">
-          <iframe width="560" height="315" src="https://nuum.ru/embed/record/1599815" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>    
+          <iframe width="850" height="478" src="https://rutube.ru/play/embed/26e4439714a73ce2f0ce0a4326e3a2d0?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>    
      </div>
      <div class="footer2">
           <div class="contein3"><b>© Интернет-канал "Райка and Лайка"</b></div>
