--- a/livetv.html
+++ b/livetv.html
@@ -318,7 +318,7 @@
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
-     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
+     <mark>Интернет-канал сейчас ничего не вещает</mark>
      <div class="video">
           <iframe width="850" height="478" src="https://rutube.ru/play/embed/d66554c78b1ce51f2f8c0d81a1e73415?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
