--- a/livetv.html
+++ b/livetv.html
@@ -318,27 +318,27 @@
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
-     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
+     <mark>Интернет-канал сейчас ничего не вещает</mark>
      <div class="video">
           <iframe width="850" height="478" src="https://rutube.ru/play/embed/dc84ff72bd39840be3ab9387d2d691ef?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
-               <b>Расписание на 06.01.2024</b>
-     <!--           <p>14:00 МСК:<br></p>
-               <p>"Рождество кота Боба"<br></p>
-               <br>
-               <p>15:37 МСК:<br></p>
-               <p>"Один дома"<br></p>
-               <br>
-               <p>17:23 МСК:<br></p>
-               <p>"Один дома 2"</p> -->
-               <br>
-               <p>С 12:40 МСК до 0:30 МСК:<br></p>
-               <p>-Короткометражный фильм "Золотой ключик"<br></p>
-               <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия.<br></p>
-               <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.<br></p>
-               <p>-Короткометражный фильм "СДЕЛКА".<br></p>
-               <p>-Велопрогулка по Подмосковью - Люберцы<br></p>
+          <b>Расписание на 07.01.2024</b>
+          <p>21:00 МСК:<br></p>
+          <p>"Рождество кота Боба"<br></p>
+          <!-- <br>
+          <p>15:37 МСК:<br></p>
+          <p>"Один дома"<br></p>
+          <br>
+          <p>17:23 МСК:<br></p>
+          <p>"Один дома 2"</p> -->
+          <br>
+          <p>до 0:30 МСК:<br></p>
+          <p>-Короткометражный фильм "Золотой ключик"<br></p>
+          <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия.<br></p>
+          <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.<br></p>
+          <p>-Короткометражный фильм "СДЕЛКА".<br></p>
+          <p>-Велопрогулка по Подмосковью - Люберцы<br></p>
      </div>
      <div class="footer2">
           <div class="contein3"><b>© Интернет-канал "Райка and Лайка"</b></div>
