--- a/livetv.html
+++ b/livetv.html
@@ -318,14 +318,14 @@
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
-     <mark>Интернет-канал сейчас ничего не вещает</mark>
+     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
      <div class="video">
-          <iframe width="850" height="478" src="https://rutube.ru/play/embed/dc84ff72bd39840be3ab9387d2d691ef?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe width="850" height="478" src="https://rutube.ru/play/embed/768b6fccf46996e96c11af1614779b17?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
-          <b>Расписание на 07.01.2024</b>
-          <p>21:00 МСК:<br></p>
-          <p>"Рождество кота Боба"<br></p>
+          <b>Расписание на 15.01.2024</b>
+          <!-- <p>21:00 МСК:<br></p>
+          <p>"Рождество кота Боба"<br></p> -->
           <!-- <br>
           <p>15:37 МСК:<br></p>
           <p>"Один дома"<br></p>
@@ -333,7 +333,7 @@
           <p>17:23 МСК:<br></p>
           <p>"Один дома 2"</p> -->
           <br>
-          <p>до 0:30 МСК:<br></p>
+          <p>с 8:50 МСК:<br></p>
           <p>-Короткометражный фильм "Золотой ключик"<br></p>
           <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия.<br></p>
           <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.<br></p>
