--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="yandex-verification" content="d6393e3431b0c435" />
-	<title>Райка and Лайка - интернет-канал</title>
+	<title>Райка and Лайка - интернет-телевидение</title>
 
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -297,7 +297,7 @@
 		<img src="/theme/images/NewLogo.png">
 	</div>
 	<div class="title">
-		<p>Интернет-канал "Райка and Лайка"</p>
+		<p>Интернет-телеканал "Райка and Лайка"</p>
 	</div>
 	<div class="description">
 		<p>Это новый сайт интернет-канала "Райка and Лайка"!</p>
