Сотрудничество "Montion Deru"

--- a/history.html
+++ b/history.html
@@ -331,8 +331,11 @@
 <a class="rabota" href="/rabota"><p>Стать частью команды</p></a>
 </div>
 <div class="footer2">
-    <div class="contein3"><b>© Интернет-канал "Райка and Лайка"</b></div>
- </div>
+     <div class="sob">
+          <img src="/theme/images/Montion Deru 2.png">
+     </div>
+    <div class="contein3"><b>© Интернет-телеканал "Райка and Лайка"</b></div>
+</div>
   </div><!-- /.entry-content -->
 </section>
 	</div>
