--- a/livetv.html
+++ b/livetv.html
@@ -340,9 +340,12 @@
           <p>-Короткометражный фильм "СДЕЛКА".<br></p>
           <p>-Велопрогулка по Подмосковью - Люберцы<br></p>
      </div>
-     <div class="footer2">
-          <div class="contein3"><b>© Интернет-канал "Райка and Лайка"</b></div>
+</div>
+<div class="footer2">
+     <div class="sob">
+          <img src="/theme/images/Montion Deru 2.png">
      </div>
+    <div class="contein3"><b>© Интернет-телеканал "Райка and Лайка"</b></div>
 </div>
   </div><!-- /.entry-content -->
 </section>
