--- a/politica.html
+++ b/politica.html
@@ -402,9 +402,11 @@
 11.1. Пользователь может получить любые разъяснения по интересующим вопросам, касающимся обработки его персональных данных, обратившись к Оператору с помощью электронной почты raika.offical@yandex.ru.<br>
 11.2. В данном документе будут отражены любые изменения политики обработки персональных данных Оператором. Политика действует бессрочно до замены ее новой версией.<br>
 11.3. Актуальная версия Политики в свободном доступе расположена в сети Интернет по адресу https://rayka-and-layka-tv.github.io/politica.</p>
-    <div class="footer2">
-        <div class="contein3"><b>© Интернет-канал "Райка and Лайка"</b></div>
+<div class="footer2">
+     <div class="sob">
+          <img src="/theme/images/Montion Deru 2.png">
      </div>
+    <div class="contein3"><b>© Интернет-телеканал "Райка and Лайка"</b></div>
 </div>
   </div><!-- /.entry-content -->
 </section>
