--- a/rabota-roblox.html
+++ b/rabota-roblox.html
@@ -319,7 +319,11 @@
 </div>
 <p class="politica">Вы можете ознакомиться с <a href="/politica">Политикой в отношении обработки персональных данных</a></p>
 <div class="footer2">
-        <div class="contein3"><b>© Интернет-канал "Райка and Лайка"</b></div>
+     <div class="sob">
+          <img src="/theme/images/Montion Deru 2.png">
+     </div>
+    <div class="contein3"><b>© Интернет-телеканал "Райка and Лайка"</b></div>
+</div>
   </div><!-- /.entry-content -->
 </section>
 	</div>
