--- a/livetv.html
+++ b/livetv.html
@@ -320,15 +320,14 @@
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
      <!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
      <div class="video">
-          <iframe width="850" height="478" src="https://rutube.ru/play/embed/8f7a24d92b6f91f91f281c524c00022f?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe width="850" height="478" src="https://rutube.ru/play/embed/a18d13490f18bf2a6f7bba77ec2b881c?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
-          <b>Расписание на 13.02.2024</b>
-          <p>С 18:35 МСК:</p>
+          <b>Расписание на 16.02.2024</b>
+          <p>С 13:30 МСК:</p>
           <p>-Короткометражный фильм "Страйдер"</p>
+          <p>-Короткометражный фильм "Страйдер 2"</p>
           <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия.</p>
-          <p>-Короткометражный фильм "ЭГО" ПРЕМЬЕРА В 19:00 МСК!</p>
-          <p>C 19:20 МСК:</p>
           <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
           <p>-Короткометражный фильм "СДЕЛКА".</p>
           <p>-Велопрогулка по Подмосковью - Люберцы</p>
