Мобильная версия исправления

--- a/history.html
+++ b/history.html
@@ -119,7 +119,7 @@
   var browserHeight;
 
   // Указываем количество снежинок, которые должны быть видимыми
-  var numberOfSnowflakes = 85;
+  var numberOfSnowflakes = 55;
 
   // Флаг для сброса положения снежинок
   var resetPosition = false;
@@ -326,7 +326,7 @@
     PR-менеджер<br>
     Графический дизайнер</p>
 </div>
-<p>Всё это актуальные вакансии. Подать заявку, нажав на кнопку ниже:</p>
+<div class="otdelnoe"><p>Всё это актуальные вакансии. Подать заявку, нажав на кнопку ниже:</p></div>
 <div class="rabota">
 <a class="rabota" href="/rabota"><p>Стать частью команды</p></a>
 </div>
