--- a/livetv.html
+++ b/livetv.html
@@ -86,7 +86,7 @@
 		}
 	</style>
 
-<style>
+<!-- <style>
   #snowflakeContainer {
     position: absolute;
     left: 0px;
@@ -280,8 +280,41 @@
   function setResetFlag(e) {
     resetPosition = true;
   }
-</script>
+</script> -->
 
+<!-- Принятие куки -->
+<div class="cookie_notice">
+    Этот сайт использует файлы cookies и сервисы сбора технических данных посетителей для обеспечения работоспособности и улучшения качества обслуживания. Продолжая использовать наш сайт, вы автоматически соглашаетесь с использованием данных технологий.
+    <div>
+        <a class="cookie_btn" id="cookie_close" href="#close">Согласиться</a>
+        <a class="cookie_btn" href="/politica">Политика конфиденциальности</a>
+    </div>
+</div>
+<script>
+	// функция возвращает cookie с именем name, если есть, если нет, то undefined    
+function getCookie(name) {
+    let matches = document.cookie.match(new RegExp(
+    "(?:^|; )" + name.replace(/([\.$?*|{}\(\)\[\]\\\/\+^])/g, '\\$1') + "=([^;]*)"
+    ));
+    return matches ? decodeURIComponent(matches[1]) : undefined;
+}
+let cookiecook = getCookie("cookiecook"),
+cookiewin = document.getElementsByClassName('cookie_notice')[0];    
+// проверяем, есть ли у нас cookie, с которой мы не показываем окно и если нет, запускаем показ
+if (cookiecook != "no") {
+    // показываем    
+    cookiewin.style.display="block"; 
+    // закрываем по клику
+    document.getElementById("cookie_close").addEventListener("click", function(){
+        cookiewin.style.display="none";    
+        // записываем cookie на 1 день, с которой мы не показываем окно
+        let date = new Date;
+        date.setDate(date.getDate() + 1);    
+        document.cookie = "cookiecook=no; path=/; expires=" + date.toUTCString();               
+    });
+}
+</script>
+<!-- Принятие куки -->
 </head>
 <body>
 	<div class="container">
@@ -318,13 +351,15 @@
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
-     <mark>Интернет-канал сейчас ничего не вещает</mark>
+     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
      <div class="video">
-          <iframe width="850" height="478" src="https://rutube.ru/play/embed/7412d1e160feb3a4d1b2a9d91e25ba53?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe width="850" height="478" src="https://rutube.ru/play/embed/f0eee4582f6bf095c509176d8e78672b?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
-          <b>Расписание на 28.02.2024</b>
-          <p>С 15:45 МСК:</p>
+          <b>Расписание на 01.03.2024</b>
+          <p>18:00 МСК:</p>
+          <p>К/Ф "Карачун"</p>
+          <p>С 18:15 МСК:</p>
           <p>-Короткометражный фильм "Страйдер"</p>
           <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
           <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия.</p>
@@ -333,8 +368,6 @@
           <p>-Велопрогулка по Подмосковью - Люберцы</p>
           <p>-Короткометражный фильм "Беседа"</p>
           <p>-Короткометражный фильм "Скейт"</p>
-<!--           <p>18:00 МСК:</p>
-          <p>К/Ф "Карачун"</p> -->
      </div>
 </div>
 <div class="footer2">
