--- a/livetv.html
+++ b/livetv.html
@@ -353,13 +353,13 @@ if (cookiecook != "no") {
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
      <mark>Интернет-канал сейчас ничего не вещает</mark>
      <div class="video">
-          <iframe width="850" height="478" src="https://rutube.ru/play/embed/f0eee4582f6bf095c509176d8e78672b?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe width="850" height="478" src="https://rutube.ru/play/embed/ceb114c61b5e4b396f1e11b2ac761cd7?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
           <b>Расписание на 01.03.2024</b>
-          <p>18:00 МСК:</p>
-          <p>К/Ф "Карачун"</p>
-          <p>С 18:15 МСК:</p>
+          <p>16:40 МСК:</p>
+          <p>К/Ф "ЭГО"</p>
+          <p>С 16:55 МСК:</p>
           <p>-Короткометражный фильм "Страйдер"</p>
           <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
           <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия.</p>
