--- a/livetv.html
+++ b/livetv.html
@@ -353,13 +353,13 @@ if (cookiecook != "no") {
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
      <!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
      <div class="video">
-          <iframe width="850" height="478" src="https://rutube.ru/play/embed/ceb114c61b5e4b396f1e11b2ac761cd7?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe width="850" height="478" src="https://rutube.ru/play/embed/c58f20461a738583e880a24cdfbfb40e?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
-          <b>Расписание на 06.03.2024</b>
-          <p>18:20 МСК:</p>
-          <p>К/Ф "ЭГО"</p>
-          <p>С 18:35 МСК:</p>
+          <b>Расписание на 08.03.2024</b>
+          <!-- <p>18:20 МСК:</p>
+          <p>К/Ф "ЭГО"</p> -->
+          <p>С 18:10 МСК:</p>
           <p>-Короткометражный фильм "Страйдер"</p>
           <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
           <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия.</p>
