--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ if (cookiecook != "no") {
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
+		<mark>Интернет-канал сейчас ничего не вещает</mark>
 </div>
 <div class="video">
 	<iframe width="850" height="478" src="https://rutube.ru/play/embed/c58f20461a738583e880a24cdfbfb40e?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
@@ -375,15 +375,13 @@ if (cookiecook != "no") {
 <!-- 		<p>Номер карты Юмани:</p>
 		<p>5106 2180 3937 8336</p> -->
 </div>
-<div class="Opros">
-	<!-- Put this script tag to the <head> of your page -->
+<!-- <div class="Opros">
 	<script type="text/javascript" src="https://vk.com/js/api/openapi.js?169"></script>
-	<!-- Put this div tag to the place, where the Poll block will be -->
 	<div id="vk_poll"></div>
 	<script type="text/javascript">
 	VK.Widgets.Poll("vk_poll", {}, "928848900_3e908c32b45ff92366");
 	</script>
-</div>
+</div> -->
 <div class="title1">
 		<b>Видео</b>
 </div>
