--- a/index.html
+++ b/index.html
@@ -348,16 +348,16 @@ if (cookiecook != "no") {
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<mark>Интернет-канал сейчас ничего не вещает</mark>
+		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
 </div>
 <div class="video">
-	<iframe width="850" height="478" src="https://rutube.ru/play/embed/c58f20461a738583e880a24cdfbfb40e?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="850" height="478" src="https://rutube.ru/play/embed/13b74d1b57aebefd3edc195ad681a909?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 </div>
 <div class="title1">
-		<b>Расписание на 08.03.2024</b>
+		<b>Расписание на 10.03.2024</b>
 		<!-- <p>18:20 МСК:</p>
 		<p>К/Ф "ЭГО"</p> -->
-		<p>С 18:10 МСК:</p>
+		<p>С 12:30 МСК:</p>
 		<p>-Короткометражный фильм "Страйдер"</p>
 		<!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
 		<p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия.</p>
