--- a/livetv.html
+++ b/livetv.html
@@ -351,15 +351,13 @@ if (cookiecook != "no") {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
-     <mark>Интернет-канал сейчас ничего не вещает</mark>
+     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
      <div class="video">
-          <iframe width="850" height="478" src="https://rutube.ru/play/embed/13b74d1b57aebefd3edc195ad681a909?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe src="https://vk.ru/video_ext.php?oid=-214689242&id=456239057" width="426" height="240" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-          <b>Расписание на 10.03.2024</b>
-          <!-- <p>18:20 МСК:</p>
-          <p>К/Ф "ЭГО"</p> -->
-          <p>С 12:30 МСК:</p>
+          <b>Расписание на 13.03.2024</b>
+          <p>С 12:50 МСК:</p>
           <p>-Короткометражный фильм "Страйдер"</p>
           <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
           <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия.</p>
@@ -368,6 +366,8 @@ if (cookiecook != "no") {
           <p>-Велопрогулка по Подмосковью - Люберцы</p>
           <p>-Короткометражный фильм "Беседа"</p>
           <p>-Короткометражный фильм "Скейт"</p>
+          <p>14:41 МСК:</p>
+          <p>К/Ф "ЭГО"</p>
      </div>
 </div>
 <div class="footer2">
