--- a/index.html
+++ b/index.html
@@ -375,13 +375,9 @@ if (cookiecook != "no") {
 <!-- 		<p>Номер карты Юмани:</p>
 		<p>5106 2180 3937 8336</p> -->
 </div>
-<!-- <div class="Opros">
-	<script type="text/javascript" src="https://vk.com/js/api/openapi.js?169"></script>
-	<div id="vk_poll"></div>
-	<script type="text/javascript">
-	VK.Widgets.Poll("vk_poll", {}, "928848900_3e908c32b45ff92366");
-	</script>
-</div> -->
+<div class="Opros">
+	<iframe src="https://yandex.ru/chat#/join/0e0da34c-6352-4b74-8963-4b8d612868df/1710335142756021" width="850" height="478" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
+</div>
 <div class="title1">
 		<b>Видео</b>
 </div>
