--- a/history.html
+++ b/history.html
@@ -365,7 +365,7 @@ if (cookiecook != "no") {
 </div>
 <div class="footer2">
      <div class="sob">
-          <img src="/theme/images/Montion Deru 2.png">
+          <a href="https://vk.com/motion.deru"><img src="/theme/images/Montion Deru 2.png"></a>
      </div>
     <div class="contein3"><b>© Интернет-телеканал "Райка and Лайка"</b></div>
 </div>
