--- a/politica.html
+++ b/politica.html
@@ -414,9 +414,9 @@ if (cookiecook != "no") {
 Безопасность персональных данных, которые обрабатываются Оператором, обеспечивается путем реализации правовых, организационных и технических мер, необходимых для выполнения в полном объеме требований действующего законодательства в области защиты персональных данных.<br>
 7.1. Оператор обеспечивает сохранность персональных данных и принимает все возможные меры, исключающие доступ к персональным данным неуполномоченных лиц.<br>
 7.2. Персональные данные Пользователя никогда, ни при каких условиях не будут переданы третьим лицам, за исключением случаев, связанных с исполнением действующего законодательства либо в случае, если субъектом персональных данных дано согласие Оператору на передачу данных третьему лицу для исполнения обязательств по гражданско-правовому договору.<br>
-7.3. В случае выявления неточностей в персональных данных, Пользователь может актуализировать их самостоятельно, путем направления Оператору уведомление на адрес электронной почты Оператора raika.offical@yandex.ru с пометкой "Актуализация персональных данных".<br>
+7.3. В случае выявления неточностей в персональных данных, Пользователь может актуализировать их самостоятельно, путем направления Оператору уведомление на адрес электронной почты Оператора raika.official@yandex.ru с пометкой "Актуализация персональных данных".<br>
 7.4. Срок обработки персональных данных определяется достижением целей, для которых были собраны персональные данные, если иной срок не предусмотрен договором или действующим законодательством.
-Пользователь может в любой момент отозвать свое согласие на обработку персональных данных, направив Оператору уведомление посредством электронной почты на электронный адрес Оператора raika.offical@yandex.ru с пометкой "Отзыв согласия на обработку персональных данных".<br>
+Пользователь может в любой момент отозвать свое согласие на обработку персональных данных, направив Оператору уведомление посредством электронной почты на электронный адрес Оператора raika.official@yandex.ru с пометкой "Отзыв согласия на обработку персональных данных".<br>
 7.5. Вся информация, которая собирается сторонними сервисами, в том числе платежными системами, средствами связи и другими поставщиками услуг, хранится и обрабатывается указанными лицами (Операторами) в соответствии с их Пользовательским соглашением и Политикой конфиденциальности. Субъект персональных данных и/или с указанными документами. Оператор не несет ответственность за действия третьих лиц, в том числе указанных в настоящем пункте поставщиков услуг.<br>
 7.6. Установленные субъектом персональных данных запреты на передачу (кроме предоставления доступа), а также на обработку или условия обработки (кроме получения доступа) персональных данных, разрешенных для распространения, не действуют в случаях обработки персональных данных в государственных, общественных и иных публичных интересах, определенных законодательством РФ.<br>
 7.7. Оператор при обработке персональных данных обеспечивает конфиденциальность персональных данных.<br>
@@ -432,12 +432,12 @@ if (cookiecook != "no") {
 <h2 class='hhh'>10. Конфиденциальность персональных данных</h2><br>
 Оператор и иные лица, получившие доступ к персональным данным, обязаны не раскрывать третьим лицам и не распространять персональные данные без согласия субъекта персональных данных, если иное не предусмотрено федеральным законом.<br>
 <h2 class='hhh'>11. Заключительные положения</h2><br>
-11.1. Пользователь может получить любые разъяснения по интересующим вопросам, касающимся обработки его персональных данных, обратившись к Оператору с помощью электронной почты raika.offical@yandex.ru.<br>
+11.1. Пользователь может получить любые разъяснения по интересующим вопросам, касающимся обработки его персональных данных, обратившись к Оператору с помощью электронной почты raika.official@yandex.ru.<br>
 11.2. В данном документе будут отражены любые изменения политики обработки персональных данных Оператором. Политика действует бессрочно до замены ее новой версией.<br>
 11.3. Актуальная версия Политики в свободном доступе расположена в сети Интернет по адресу https://rayka-and-layka-tv.github.io/politica.</p>
 <div class="footer2">
      <div class="sob">
-          <img src="/theme/images/Montion Deru 2.png">
+          <a href="https://vk.com/motion.deru"><img src="/theme/images/Montion Deru 2.png"></a>
      </div>
     <div class="contein3"><b>© Интернет-телеканал "Райка and Лайка"</b></div>
 </div>
