--- a/rabota-osnova.html
+++ b/rabota-osnova.html
@@ -353,7 +353,7 @@ if (cookiecook != "no") {
 <p class="politica">Вы можете ознакомиться с <a href="/politica">Политикой в отношении обработки персональных данных</a></p>
 <div class="footer2">
      <div class="sob">
-          <img src="/theme/images/Montion Deru 2.png">
+          <a href="https://vk.com/motion.deru"><img src="/theme/images/Montion Deru 2.png"></a>
      </div>
     <div class="contein3"><b>© Интернет-телеканал "Райка and Лайка"</b></div>
 </div>
