--- a/rabota.html
+++ b/rabota.html
@@ -354,7 +354,7 @@ if (cookiecook != "no") {
 
 <div class="footer2">
      <div class="sob">
-          <img src="/theme/images/Montion Deru 2.png">
+          <a href="https://vk.com/motion.deru"><img src="/theme/images/Montion Deru 2.png"></a>
      </div>
     <div class="contein3"><b>© Интернет-телеканал "Райка and Лайка"</b></div>
 </div>
