--- a/index.html
+++ b/index.html
@@ -348,15 +348,15 @@ if (cookiecook != "no") {
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<mark>Интернет-канал сейчас ничего не вещает</mark>
+		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
 </div>
 <div class="video">
 	<!-- <iframe width="560" height="315" src="https://nuum.ru/embed/record/1777558" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
-	<iframe width="850" height="478" src="https://rutube.ru/play/embed/eaf94b25114976c85f41f7680e2e9c4f?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="850" height="478" src="https://rutube.ru/play/embed/1cdd05eb7863810373e48bd5754553a1?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 </div>
 <div class="title1">
-		<b>Расписание на 19.03.2024</b>
-		<p>С 18:00 МСК:</p>
+		<b>Расписание на 22.03.2024</b>
+		<p>С 15:30 МСК:</p>
 		<p>-Короткометражный фильм "Страйдер"</p>
 		<!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
 		<p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия.</p>
@@ -365,8 +365,8 @@ if (cookiecook != "no") {
 		<p>-Велопрогулка по Подмосковью - Люберцы</p>
 		<p>-Короткометражный фильм "Беседа"</p>
 		<p>-Короткометражный фильм "Скейт"</p>
-		<p>19:53 МСК:</p>
-		<p>К/Ф "ЭГО"</p>
+		<p>17:23 МСК:</p>
+		<p>К/Ф "Карачун"</p>
 </div>
 
 <div class="title2">
