--- a/livetv.html
+++ b/livetv.html
@@ -353,7 +353,7 @@ if (cookiecook != "no") {
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
      <!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
      <div class="video">
-          <iframe width="560" height="315" src="https://nuum.ru/embed/record/1814131" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://nuum.ru/embed/record/1814131" title="Nuum video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
      </div>
      <div class="title1">
           <b>Расписание на 24.03.2024</b>
