--- a/livetv.html
+++ b/livetv.html
@@ -353,7 +353,7 @@ if (cookiecook != "no") {
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
      <!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
      <div class="video">
-          <iframe width="560" height="315" src="https://nuum.ru/embed/record/1814187" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239061&hd=1" width="640" height="360" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
           <b>Расписание на 24.03.2024</b>
