--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ if (cookiecook != "no") {
 		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
 </div>
 <div class="video">
-	<iframe width="560" height="315" src="https://nuum.ru/embed/record/1814187" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	<iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239061&hd=1" width="640" height="360" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
 	<!-- <iframe width="850" height="478" src="https://rutube.ru/play/embed/1cdd05eb7863810373e48bd5754553a1?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> -->
 </div>
 <div class="title1">
