--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ if (cookiecook != "no") {
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
+		<mark>Интернет-канал сейчас ничего не вещает</mark>
 </div>
 <div class="video">
 	<iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239061&hd=1" width="640" height="360" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
