--- a/livetv.html
+++ b/livetv.html
@@ -351,7 +351,7 @@ if (cookiecook != "no") {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
-     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
+     <mark>Интернет-канал сейчас ничего не вещает</mark>
      <div class="video">
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239061&hd=1" width="640" height="360" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
      </div>
