--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ if (cookiecook != "no") {
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
+		<mark>Интернет-канал сейчас ничего не вещает</mark>
 </div>
 <div class="video">
 	<iframe width="850" height="478" src="https://rutube.ru/play/embed/f2b7dd06fcfa59ca49a3fe2393d761c2?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
