--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ if (cookiecook != "no") {
 		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
 </div>
 <div class="video">
-	<iframe width="560" height="315" src="https://nuum.ru/embed/record/1910335" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	<iframe width="560" height="315" src="https://nuum.ru/embed/record/1910335" title="Nuum video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 <div class="title1">
 		<b>Расписание на 14.04.2024</b>
