--- a/history.html
+++ b/history.html
@@ -348,7 +348,7 @@ if (cookiecook != "no") {
 </div>
 
 <div class='ob'>
-    <h1 class='hhh'>История интернет-канала:<h1>
+    <h1 class='hhh'>История интернет-телеканала:<h1>
     <p>Дата основания была официально припредставлена 23.10.2022</p>
     <br>
     <h1 class='hhh'>Вакансии:<h1>
