--- a/clips.html
+++ b/clips.html
@@ -353,10 +353,17 @@ if (cookiecook != "no") {
 <div class='albob'>
     <h1 class='alb'>Видеоклипы от зрителей<h1>
 </div>
+<div class="rabota">
+    <a class="rabota" href="/yauchastnik"><p>СТАТЬ УЧАСТНИКОМ!</p></a>
+</div>
+<div class="rabota">
+    <a class="rabota" href="/golos"><p>ПРОГОЛОСОВАТЬ ЗА ВИДЕО</p></a>
+</div>
 <div class="vid1">
     <img src="/theme/images/1место.png">
     <iframe src="https://nuum.ru/clips/1881038-roblox-metro-moskvy-nekrasovka" width="325" height="646" allow="autoplay; encrypted-media; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
     <p>Видео от Райка and Лайка</p>
+    <script src="https://forms.yandex.ru/_static/embed.js"></script><iframe src="https://forms.yandex.ru/cloud/663bae823e9d0897c0502942/?iframe=1" width="400"></iframe>
 </div>
 <div class="vid">
     <img src="/theme/images/2место.png">
